// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar Component matches snapshot with keyword set 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <label
      class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
      for="search"
      id="search-label"
    >
      Search
    </label>
    <div
      class="relative"
      role="search"
    >
      <input
        aria-busy="false"
        aria-labelledby="search-label"
        class="
            block w-full p-3 ps-6 md:ps-10 text-lg text-gray-900 border border-2 border-gray-300
            rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700
            dark:border-gray-600 dark:placeholder-gray-300 dark:text-white
            dark:focus:ring-jesdark-500 dark:focus:border-jesdark-500
          "
        id="search"
        placeholder="Search e.g., 頑張る..."
        required=""
        type="search"
        value="test"
      />
      <button
        aria-label="Search"
        class="
            text-white absolute end-2.5 bottom-2.5  focus:ring-4 focus:outline-none
            focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2
            dark:bg-jesdark-500 bg-blue-600 hover:bg-blue-800 dark:hover:bg-jesdark-700
          "
        data-testid="search-button"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
      <button
        aria-label="Reset input"
        class="
            text-grey absolute end-16 bottom-2.5 font-medium
            rounded-lg text-sm px-4 py-2 dark:text-white
          "
        data-testid="reset-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchBar Component renders with correct placeholder for large screens 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <label
      class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
      for="search"
      id="search-label"
    >
      Search
    </label>
    <div
      class="relative"
      role="search"
    >
      <input
        aria-busy="false"
        aria-labelledby="search-label"
        class="
            block w-full p-3 ps-6 md:ps-10 text-lg text-gray-900 border border-2 border-gray-300
            rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700
            dark:border-gray-600 dark:placeholder-gray-300 dark:text-white
            dark:focus:ring-jesdark-500 dark:focus:border-jesdark-500
          "
        id="search"
        placeholder="Search with Japanese or English, e.g, 頑張る..."
        required=""
        type="search"
        value=""
      />
      <button
        aria-label="Search"
        class="
            text-white absolute end-2.5 bottom-2.5  focus:ring-4 focus:outline-none
            focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2
            dark:bg-jesdark-500 bg-blue-600 hover:bg-blue-800 dark:hover:bg-jesdark-700
          "
        data-testid="search-button"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
      <button
        aria-label="Reset input"
        class="
            text-grey absolute end-16 bottom-2.5 font-medium
            rounded-lg text-sm px-4 py-2 dark:text-white
          "
        data-testid="reset-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchBar Component renders with correct placeholder for small screens 1`] = `
<DocumentFragment>
  <div
    class="w-full"
  >
    <label
      class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white"
      for="search"
      id="search-label"
    >
      Search
    </label>
    <div
      class="relative"
      role="search"
    >
      <input
        aria-busy="false"
        aria-labelledby="search-label"
        class="
            block w-full p-3 ps-6 md:ps-10 text-lg text-gray-900 border border-2 border-gray-300
            rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700
            dark:border-gray-600 dark:placeholder-gray-300 dark:text-white
            dark:focus:ring-jesdark-500 dark:focus:border-jesdark-500
          "
        id="search"
        placeholder="Search e.g., 頑張る..."
        required=""
        type="search"
        value=""
      />
      <button
        aria-label="Search"
        class="
            text-white absolute end-2.5 bottom-2.5  focus:ring-4 focus:outline-none
            focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2
            dark:bg-jesdark-500 bg-blue-600 hover:bg-blue-800 dark:hover:bg-jesdark-700
          "
        data-testid="search-button"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </button>
      <button
        aria-label="Reset input"
        class="
            text-grey absolute end-16 bottom-2.5 font-medium
            rounded-lg text-sm px-4 py-2 dark:text-white
          "
        data-testid="reset-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
